# OOP

./: CMakeLists.txt  README.md  lab1.cmake  lab1.cpp  main.cpp  normal_CmakeLists.txt  normal_cmake  test_lab1.cpp
lab3/: CMakeLists.txt  figure.cpp
lab3/include/: figure.h  hexagon.h  pentagon.h  rhomb.h
lab3/src/: figure.cpp  main.cpp
lab4/include/: Figure.h  Point.h  array.h  rectangle.h  square.h  trapezoid.h
lab4/src/: main.cpp
lab4/test/: lab4_test
lab5/: CMakeLists.txt
lab5/test/: tests.cpp
lab6/: CMakeLists.txt  main.cpp
lab6/src/: dragon.cpp
test/: test_lab1.cpp
